# mlp-medical-classification

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements-notebook.txt  requirements.txt
.github/workflows/: smoke.yml
data/: README.md
docs/: experiment_notes.md  portfolio_summary.md
notebooks/: README.md  medical_mlp_classification.ipynb
results/: README.md  model_comparison.csv  summary.json
scripts/: generate_result_assets.py  run_experiment.py
src/medical_mlp_classification/: __init__.py  experiment.py
tests/: test_data_loading.py  test_experiment_logic.py  test_portfolio_assets.py  test_project_assets.py
