[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlp-medical-classification"
version = "0.1.0"
description = "Reproducible MLP and baseline experiments for diabetes-positive classification."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [
  { name = "NAMEisNOTvailable" }
]
keywords = [
  "machine-learning",
  "medical-classification",
  "mlp",
  "imbalanced-data",
  "model-evaluation"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "tensorflow>=2.13,<2.16",
  "numpy>=1.23,<2",
  "pandas>=1.5,<3",
  "matplotlib>=3.7,<4",
  "scikit-learn>=1.2,<1.6",
  "imbalanced-learn>=0.10,<0.13"
]

[project.optional-dependencies]
dev = [
  "pytest>=7,<9"
]
notebook = [
  "jupyter>=1.0,<2",
  "ipykernel>=6.0,<7"
]

[project.scripts]
medical-mlp-classification = "medical_mlp_classification.experiment:main"

[tool.setuptools.packages.find]
where = ["src"]
